--- a/css/style.scss
+++ b/css/style.scss
@@ -372,7 +372,6 @@ form {
 
 #nogame {
     display: none;
-    margin: 100px 10%;
 }
 
 #gameHeader {
@@ -437,5 +436,16 @@ form {
 
     #nogame {
         display: block;
+
+        h2 {
+            padding-top: 50px;
+        }
+
+        h3 {
+            padding: 50px;
+            padding-top: 0;
+            padding-bottom: 100px;
+        }
+
     }
 }
