--- a/css/style.css
+++ b/css/style.css
@@ -1,417 +1,250 @@
-/* Variables */
-/* Chart colours */
-/* Overall Body style */
-html {
-  min-height: 100%;
+/* General body styling */
+body, html {
   position: relative;
-}
-
-body {
-  text-align: center;
-  background-color: #fcfcfc;
-  margin-bottom: 60px;
-}
-
-h1 {
-  font-size: 100px;
-}
-
-h2 {
-  font-size: 2.5em;
-}
-
-h3 {
-  font-size: 26px;
-}
-
-.box {
-  padding: 60px 10%;
-  text-align: left;
-}
-
-.white {
-  background-color: white;
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-}
-
-form {
-  margin-top: 30px;
-}
-
-/* Navbar style */
-.navbar {
+  height: 100%;
+  min-width: 330px;
   margin: 0;
+  font: 400 15px/1.6 "Lato", sans-serif;
+  color: #555;
+  background-color: #222;
+}
+
+/* Some other general styles */
+h2 {
+  font-weight: bolder;
+}
+
+.padded {
+  padding: 0 30px 60px 30px;
+}
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 45%;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  opacity: 0.9;
+}
+
+.border {
+  background-color: #222;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+  box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+.text-box {
+  text-align: justify;
+}
+
+.content {
+  padding-top: 80px;
+  background-color: white;
+}
+
+/* Extra style for Bootstrap nav */
+nav {
+  letter-spacing: 1px;
+  background-color: #222;
+  box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+nav .container {
+  margin-left: 10px;
+  margin-right: 0;
 }
 
 .navbar-brand {
-  font-size: 35px;
+  font-size: 20px;
 }
 
-.navbar-brand em {
+em {
   font-weight: lighter;
 }
 
-/* Footer style */
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  background-color: #222;
-  color: white;
-}
-
-/* Welcome banner style */
-#welcome {
+/* Style for fixed background images */
+.bgimg-1, .bgimg-2 {
   position: relative;
-  display: inline-block;
-  padding: 0;
-  background-color: white;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-#welcome .textbox {
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 15%;
-  color: black;
+.bgimg-1 {
+  background-image: url("../images/b1_op8.jpg");
+  min-height: 500px;
 }
 
-#welcome p {
-  font-size: 20px;
-  font-weight: 200;
+.bgimg-2 {
+  background-image: url("../images/b2_op6.jpg");
+  min-height: 400px;
 }
 
-#welcome img {
-  opacity: 0.15;
-  min-height: 200px;
-}
-
-/* Featured project style */
+/* Style for portfolio section */
 #portfolio {
-  margin-top: 40px;
-  margin-bottom: 100px;
+  padding-bottom: 50px;
 }
 
-#portfolio h2 {
-  padding: 10px 0;
+.bgimg-2 .col-md-6 {
+  margin-bottom: 40px;
 }
 
-/* Project style */
+.heading {
+  text-align: center;
+  margin: 80px 0 50px 0;
+  color: #fff;
+  opacity: 0.9;
+}
+
 .project {
-  padding: 20px;
-  margin: 20px auto;
-  min-height: 440px;
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-  background-color: white;
-  -o-transition: opacity 0.3s ease-out;
-  -moz-transition: opacity 0.3s ease-out;
-  -webkit-transition: opacity 0.3s ease-out;
-  transition: opacity 0.3s ease-out;
+  text-align: center;
+  color: #fff;
+  box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.3);
 }
 
-.project img {
-  margin-bottom: 30px;
+.project .caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+h3 {
+  padding-top: 20px;
+  letter-spacing: 2px;
 }
 
 .project p {
-  margin-bottom: 20px;
-  padding: 0 5%;
-  font-weight: lighter;
+  font-style: italic;
+  letter-spacing: 2px;
 }
 
-/* About style */
-#about {
-  font-size: larger;
-  padding-bottom: 0;
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 15px;
+  right: 15px;
+  opacity: 1;
+  transition: .3s ease;
+  background-color: #222;
+  background-color: rgba(2, 2, 2, 0.8);
 }
 
-#about h2 {
-  font-weight: bolder;
+.project:hover .overlay {
+  opacity: 1;
 }
 
-#about p {
-  font-weight: lighter;
-  padding-bottom: 50px;
-  padding-right: 50px;
+/* Style for contact section */
+.social {
+  padding: 20px 0 60px 0;
 }
 
-/* Chart style */
-#chart {
-  margin-top: 8%;
-  display: block;
-  padding: 0;
-  padding-left: 10%;
-  padding-right: 10%;
+.social a {
+  text-decoration: none;
+  color: white;
 }
 
-#chart h2 {
-  padding: 30px;
-}
-
-.chart {
-  padding: 0;
-  width: 100%;
-  margin-bottom: 60px;
-}
-
-@media screen and (min-width: 768px) {
-  .chart {
-    list-style: none;
-    height: 425px;
-    position: relative;
-    margin: 0;
-  }
-}
-
-.chart li {
-  display: block;
-  height: 125px;
-  margin: 5px;
-  padding: 5px;
-  position: relative;
-  text-align: center;
-  border-radius: 6px;
-  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.6);
-}
-
-@media screen and (min-width: 768px) {
-  .chart li {
-    display: inline-block;
-    width: 14%;
-    height: 100%;
-    margin: 0 2% 0 0;
-    padding: 0;
-    vertical-align: bottom;
-    border-bottom: #EEE solid 1px;
-    border-radius: 4px 4px 0 0;
-  }
-}
-
-.chart .axis {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
-  .chart .axis {
-    display: inline-block;
-    background: #fcfcfc;
-    height: 425px;
-    border-right: #DDD solid 1px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .chart .label {
-    display: block;
-    padding: 0;
-    color: #333;
-    font-size: 16px;
-    font-size: 1.6rem;
-    font-weight: lighter;
-    margin: -8px 0 76px 0;
-  }
-}
-
-.chart .percent {
-  opacity: .4;
-  width: 100%;
-  font-size: 40px;
-}
-
-.chart .percent span {
+/* Style all font awesome icons */
+.fa {
+  padding: 15px;
   font-size: 20px;
+  width: 50px;
+  margin: 5px 2px;
+  border-radius: 50%;
 }
 
-@media screen and (min-width: 768px) {
-  .chart .percent {
-    position: absolute;
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Github */
+.fa-github {
+  background: black;
+  color: white;
+}
+
+/* LinkedIn */
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+/* Footer styling */
+footer {
+  background-color: #222;
+  min-height: 20px;
+  margin: 0;
+}
+
+footer p {
+  margin: 0;
+  padding: 15px;
+  color: #eee;
+  letter-spacing: 2px;
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+  .bgimg-1, .bgimg-2 {
+    background-attachment: scroll;
   }
 }
 
-.chart .skill {
-  font-weight: 800;
-  opacity: .5;
-  overflow: hidden;
-  text-transform: uppercase;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .chart .skill {
-    bottom: 20px;
-    position: absolute;
+/* Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap */
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  nav .container {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
-.chart .teal {
-  background: #4ecdc4;
-  border: 1px solid #4ecdc4;
-  background-image: -webkit-linear-gradient(#76d8d1, #4ecdc4 70%);
-  background-image: -moz-linear-gradient(#76d8d1, #4ecdc4 70%);
-  background-image: -o-linear-gradient(#76d8d1, #4ecdc4 70%);
-  background-image: linear-gradient(#76d8d1, #4ecdc4 70%);
-}
-
-.chart .salmon {
-  background: #ff6b6b;
-  border: 1px solid #ff6b6b;
-  background-image: -webkit-linear-gradient(#ff9e9e, #ff6b6b 70%);
-  background-image: -moz-linear-gradient(#ff9e9e, #ff6b6b 70%);
-  background-image: -o-linear-gradient(#ff9e9e, #ff6b6b 70%);
-  background-image: linear-gradient(#ff9e9e, #ff6b6b 70%);
-}
-
-.chart .lime {
-  background: #97f464;
-  border: 1px solid #97f464;
-  background-image: -webkit-linear-gradient(#b7f794, #97f464 70%);
-  background-image: -moz-linear-gradient(#b7f794, #97f464 70%);
-  background-image: -o-linear-gradient(#b7f794, #97f464 70%);
-  background-image: linear-gradient(#b7f794, #97f464 70%);
-}
-
-.chart .peach {
-  background: #ffcd92;
-  border: 1px solid #ffcd92;
-  background-image: -webkit-linear-gradient(#ffe4c5, #ffcd92 70%);
-  background-image: -moz-linear-gradient(#ffe4c5, #ffcd92 70%);
-  background-image: -o-linear-gradient(#ffe4c5, #ffcd92 70%);
-  background-image: linear-gradient(#ffe4c5, #ffcd92 70%);
-}
-
-.chart .grape {
-  background: #ab64f4;
-  border: 1px solid #ab64f4;
-  background-image: -webkit-linear-gradient(#c594f7, #ab64f4 70%);
-  background-image: -moz-linear-gradient(#c594f7, #ab64f4 70%);
-  background-image: -o-linear-gradient(#c594f7, #ab64f4 70%);
-  background-image: linear-gradient(#c594f7, #ab64f4 70%);
-}
-
-/* Facts style */
-#facts {
-  padding: 100px 20%;
-  border-top: #EEE solid 1px;
-}
-
-#facts h2 {
-  padding-top: 2%;
-}
-
-#facts ul {
-  list-style: none;
-  padding: 10px;
-  margin-bottom: 50px;
-  font-size: 24px;
-  font-weight: lighter;
-}
-
-#facts ul li {
-  padding: 5px;
-}
-
-#facts img {
-  max-height: 500px;
-}
-
-/* Contact style */
-#contact {
-  font-size: larger;
-}
-
-#contact h2 {
-  padding-top: 10%;
-  font-weight: bolder;
-}
-
-#contact p {
-  font-weight: lighter;
-}
-
-#contact img {
-  max-height: 400px;
-}
-
-/* Game */
-#game {
-  margin-top: 70px;
-  margin-bottom: 120px;
-}
-
-#game h1 {
-  font-size: 60px;
-}
-
-#nogame {
-  display: none;
-}
-
-#gameHeader {
-  max-width: 500px;
-}
-
-#start {
-  margin: 20px;
-}
-
-#score {
-  font-size: larger;
-  font-weight: bolder;
-  float: left;
-  margin-top: 50px;
-}
-
-#reset {
-  float: right;
-  margin-top: 50px;
-}
-
-/* Extra small devices (phones, up to 767px) */
-@media screen and (max-width: 767px) {
-  #welcome .textbox {
-    top: 5%;
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .overlay {
+    opacity: 0;
   }
-  .project {
-    margin: 30px 10%;
-    min-height: 0;
+  nav {
+    background-color: #222;
+    background-color: rgba(2, 2, 2, 0);
+    box-shadow: none;
+  }
+  .fixed-top.scrolled {
+    background-color: #222 !important;
+    transition: background-color 200ms linear;
+    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.3);
   }
 }
 
-/* Small devices (tablets, 768px and up to 991px) */
-@media screen and (max-width: 991px) {
-  #welcome h1 {
-    font-size: 60px;
-  }
-  #welcome p {
-    font-size: 16px;
-  }
-  #about img {
-    max-width: 100%;
-  }
-  #facts {
-    text-align: center;
-    padding: 50px 20%;
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  h2 {
+    margin-top: 20px;
   }
 }
 
-@media screen and (max-device-width: 1024px) {
-  #game {
-    display: none;
-  }
-  #nogame {
-    display: block;
-  }
-  #nogame h2 {
-    padding-top: 50px;
-  }
-  #nogame h3 {
-    padding: 50px;
-    padding-top: 0;
-    padding-bottom: 100px;
-  }
+/* Extra large devices (large desktops, 1200px and up) 
+@media (min-width: 1200px) {
+  ...;
 }
+*/
