--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@
 body, html {
   position: relative;
   height: 100%;
-  min-width: 330px;
+  min-width: 300px;
   margin: 0;
   font: 400 15px/1.6 "Lato", sans-serif;
   color: #555;
@@ -32,7 +32,7 @@ h2 {
   background-color: #222;
   padding: 18px;
   font-size: 25px;
-  letter-spacing: 10px;
+  letter-spacing: 7px;
   box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -129,6 +129,7 @@ h3 {
   position: absolute;
   top: 0;
   bottom: 0;
+  height: 100%;
   left: 15px;
   right: 15px;
   opacity: 1;
