--- a/css/styles.scss
+++ b/css/styles.scss
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
     .navbar-collapse {
-        border-color: fade-out(white, .02);
+        border-color: fade-out(black, .02);
     }
     .navbar-toggle {
         background-color: $theme-primary;
