--- a/css/styles.scss
+++ b/css/styles.scss
@@ -423,6 +423,9 @@ ul.social-buttons {
             margin-bottom: 15px;
             font-size: 3em;
         }
+        hr {
+            margin: 60px;
+        }
         p {
             margin-bottom: 30px;
         }
