--- a/javascript-calculator/style.css
+++ b/javascript-calculator/style.css
@@ -1,3 +1,8 @@
+/*
+  Author: Matthew Dobie
+  Author URL: mattdobie.com
+  Description: Style for JavaScript Calculator
+*/
 body {
   position: relative;
   background-color: #667484;
