--- a/javascript-calculator/style.scss
+++ b/javascript-calculator/style.scss
@@ -1,3 +1,10 @@
+/*
+  Author: Matthew Dobie
+  Author URL: mattdobie.com
+  Description: Style for JavaScript Calculator
+*/
+
+
 $background: #667484;
 $calculator: #1b1f23;
 $blue: #5bc0de;
